# aegis

./: .gitignore  CHANGELOG.md  README.md  aegis_world.bak  create_datasets_for_a3.py  create_datasets_from_mnist.py  fetch_client.py  mkdocs.yml  package-lock.json  package.json  pyproject.toml  random_world.py  requirements-mas.txt  requirements.txt  run.py  run_headless_aegis_with_agents.py  setup.py
.github/: .release-please-manifest.json  PULL_REQUEST_TEMPLATE.md  pull_request_template.md  release-please-config.json  release-please-config.yml
client/: .eslintrc.cjs  .prettierrc.yaml  CHANGELOG.md  README.md  electron.vite.config.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client-tauri/: package.json  vite.config.ts
config/: config.json  config.yaml  old_config.json
docs/: README.md  a1_config.md  astro.config.mjs  common_errors.md  content-collections.ts  mdx-components.tsx  mkdocs.yml  next.config.mjs  next.config.ts  package-lock.json  package.json  source.config.ts  tailwind.config.js  tailwind.config.mjs  tailwind.config.ts  vite.config.ts
docs.bak/: index.html  tsconfig.json
docs.md/: astro.config.mjs  components.json  package-lock.json  package.json  tailwind.config.mjs
docsback/: api.md  common_errors.md  index.md
prediction_data/: README.md
schema/: README.md  package-lock.json  package.json
schemas/: aegis.proto
scripts/: create_datasets_for_a3.py  gen_api.py  generate_protobuf.py  random_world.py  sort.py  test_protobuf.py
src/: mkdocs.yml
sys_files/: aegis_config.json
tests/: test_direction.py
worlds/: 1.world  100-health-surv.world  3-survs-line.world  AStarGiant.world  AStarKiller.world  BiggestWorld.world  CoolestWorldEver.world  ExampleWorld.world  ExampleWorld1.world  ExampleWorld2.world  ForFunRandomSplit.world  InvalidJson.world  InvalidMaxHeight.world  InvalidMaxWidth.world  InvalidMinHeight.world  InvalidMinWidth.world  Pathological.world  SquishedWorld.world  agent_energy.world  dead.world  drone-scan-test.world  move_cost.world  need-4-agent.world  needs-4-agent.world  notes.txt  pred_test.world  prob3-6.world  prob4-1.world  spawn.world  surv-remove-test.world  surv_galore.world  test.world  test11.world  test12.world  test13.world  (+18 more)
(+1044 files in other folders)
