[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aegis"
description = "Survivor Simulation for CPSC383"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "protobuf==5.29.5",
    "websocket-server==0.6.4",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/aegis/__init__.py"

[project.scripts]
aegis = "aegis:main"

[project.optional-dependencies]
comp = [
    "numpy>=1.26.4",
    "tensorflow>=2.18.1",
]

[dependency-groups]
dev = [
    "hatch>=1.14.1",
    "mypy-protobuf>=3.6.0",
    "ruff>=0.12.2",
]
